[package]
name = "archive_my_stuff"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/archive_my_stuff"
repository = "https://github.com/celeo/archive_my_stuff"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.31"
chrono = { version = "0.4.11", features = ["serde"] }
dialoguer = "0.6.2"
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["json", "blocking"]}
rpassword = "4.0.5"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3.14"
